--- a/index.html
+++ b/index.html
@@ -4,10 +4,65 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV </title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>CV</title>
+    <link rel="stylesheet" href="C:\Users\PC4\Desktop\AgevalCV\css\style.css">
 </head>
 <body>
-    
+    <section class="Intro">
+        <div class="Nom">
+        <img src="img\Silhouette-homme.png" alt="pfp">
+        <H1>Maxence Monnier</H1>
+        <h2>Projet : Développeur Python</h2>
+        </div>
+    </section>
+    <section class="infos">
+        <div class="phone">
+            <img src="img\iconmonstr-mobile-thin.svg" alt="Phone">
+            <p>0625957880</p>
+        </div>
+        <div class="mail">
+            <img src="img\iconmonstr-mail-thin.svg" alt="mail">
+            <p>maxencemonnier@gmail.com</p>
+        </div>
+        <div class="website">
+            <img src="img\iconmonstr-globe-thin.svg" alt="website">
+            <p>En construction</p>
+        </div>
+        <div class="permis">
+            <img src="img\iconmonstr-car-2.svg" alt="car">
+            <p>Permis B • Véhiculé</p>
+        </div>
+        <div class="Linkedin">
+            <img src="img\icons8-linkedin-2 (1).svg" alt="Linkedin">
+            <p> <a href="linkedin.com/in/monniermaxence">linkedin.com/in/monniermaxence</a> </p>
+        </div>
+    </section>
+    <section class="Formations">
+        <h4>2018</h4>
+        <p>Obtention du Baccalauréat Spécialité Littéraire, option Anglais Renforcé</p>
+        <h4>2018-2020</h4>
+        <p>Licence LLCER Anglais • Université Lille</p>
+    </section>
+    <section class="Expériences">
+        <h4>Employé Polyvalent • Atelier Numérique</h4>
+        <p>2022 - À Aujourd'hui <br> Exploration du numérique et du développement web à l'Atelier Numérique d'Ageval</p>
+        <h4>Aide Informatique • Service Civique</h4>
+        <p>2021-2022 <br> Médiateur Numérique pour le Pôle Emploi de Condé-sur-l'Escaut</p>
+        <h4>Modérateur • Bénévolat</h4>
+        <p>Modérateur, Médiateur Social d'une communauté internationale en ligne, exclusivement en Anglais</p>
+    </section>
+    <section class="Skills">
+        <img src="img\HTML vector.svg" alt="html">
+        <img src="img\CSS vector.svg" alt="css">
+        <img src="img\icons8-adobe-photoshop.svg" alt="photoshop">
+        <img src="img\icons8-visual-studio-code-2019.svg" alt="visual code">
+        <img src="img\wordpress.svg" alt="wordpress">
+        <img src="img\icons8-office-365.svg" alt="Pack Office">
+        <img src="img\united-kingdom.svg" alt="Union Jack">
+    </section>
+
+    <div class="machins">
+        <img src="img\trucs qui flottent.svg" alt="ah">
+    </div>
 </body>
 </html>
