--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="outer-wrapper">
         <div class="wrapper">
-          <div class="slide un">
+          <div class="slide one">
             <section class="Intro">
                 <div class="Nom">
                 <img src="img\Silhouette-homme.png" alt="pfp">
@@ -22,7 +22,7 @@
                 </div>
             </section>
           </div>
-    <div class="slide deux">
+    <div class="slide two">
             <section class="infos">
                 <div class="phone">
                     <img src="img\iconmonstr-mobile-thin.svg" alt="Phone">
@@ -49,7 +49,7 @@
                 </div>
             </section>
           </div>
-    <div class="slide trois">
+    <div class="slide three">
             <section class="Formations">
                 <h4>2018</h4>
                 <p>Obtention du Baccalauréat Spécialité Littéraire, option Anglais Renforcé</p>
@@ -60,7 +60,7 @@
                 </div>
             </section>
           </div>
-    <div class="slide quatre">
+    <div class="slide four">
             <section class="Expériences">
                 <h4>Employé Polyvalent • Atelier Numérique</h4>
                 <p>2022 - À Aujourd'hui <br> Exploration du numérique et du développement web à l'Atelier Numérique d'Ageval</p>
