--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
     <link rel="stylesheet" href="css\style.css">
 </head>
 <body>
-    
+    <nav>
+       <ul>
+        <li> <a href=""></a></li>
+       </ul> 
+    </nav>   
 
 
     <div class="outer-wrapper">
         <div class="wrapper">
-          <div class="slide one">
+          <div class="slide one" id="Slide one">
             <section class="Intro">
                 <div class="Nom">
                 <img src="img\Silhouette-homme.png" alt="pfp">
@@ -22,7 +26,7 @@
                 </div>
             </section>
           </div>
-    <div class="slide two">
+    <div class="slide two" id="Slide two">
             <section class="infos">
                 <div class="phone">
                     <img src="img\iconmonstr-mobile-thin.svg" alt="Phone">
@@ -49,7 +53,7 @@
                 </div>
             </section>
           </div>
-    <div class="slide three">
+    <div class="slide three" id="Slide three">
             <section class="Formations">
                 <h4>2018</h4>
                 <p>Obtention du Baccalauréat Spécialité Littéraire, option Anglais Renforcé</p>
@@ -59,8 +63,6 @@
                     <img src="img\trucs qui flottent.svg" alt="ah">
                 </div>
             </section>
-          </div>
-    <div class="slide four">
             <section class="Expériences">
                 <h4>Employé Polyvalent • Atelier Numérique</h4>
                 <p>2022 - À Aujourd'hui <br> Exploration du numérique et du développement web à l'Atelier Numérique d'Ageval</p>
@@ -72,6 +74,9 @@
                     <img src="img\trucs qui flottent.svg" alt="ah">
                 </div>
             </section>
+          </div>
+    <div class="slide four" id="Slide four">
+
             <section class="Skills">
                 <img src="img\HTML vector.svg" alt="html">
                 <img src="img\CSS vector.svg" alt="css">
