la navbar fait des siennes

--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
     <link rel="stylesheet" href="css\style.css">
 </head>
 <body>
-    <nav>
-       <ul>
-        <li> <a href=""></a></li>
-       </ul> 
-    </nav>   
+    <header>
+        <nav>
+            <div class="navbar">
+                <a  href="#Slide one" class="active"><img src="img\home.svg" alt=""> Home</a>
+                <a href="#Slide two"><img src="img\Infos.svg" alt=""> Contact</a>
+                <a href="#Slide three"><img src="img\Skills.svg" alt=""> Parcours</a>
+                <a href="#Slide four"><img src="img\Skills.svg" alt="">Technologies</a>
+              </div> 
+        </nav>
+    </header>
+      
 
 
     <div class="outer-wrapper">
