--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                   </li>
                   <li class="event" id="date" data-date="2019 - Aujourd'hui">
                     <h3>Modérateur • Bénévolat.</h3>
-                    <p></p> <p>Modérateur, Médiateur Social d'une communauté internationale en ligne, exclusivement en Anglais.</p>    
+                    <p>Modérateur, Médiateur Social d'une communauté internationale en ligne, exclusivement en Anglais.</p>    
                   </li>
                   
                   <li class="event" data-date="2021-2022">
