--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <header>
         <nav>
             <div class="navbar">
-                <a  href="#Slide one" class="active"><img src="img\home.svg" alt=""> Home</a>
-                <a href="#Slide two"><img src="img\Infos.svg" alt=""> Contact</a>
-                <a href="#Slide three"><img src="img\Skills.svg" alt=""> Parcours</a>
-                <a href="#Slide four"><img src="img\Skills.svg" alt="">Technologies</a>
+                <a  href="#Slide one" class="active"><img src="img\home.svg" alt=""></a>
+                <a href="#Slide two"><img src="img\Infos.svg" alt=""></a>
+                <a href="#Slide three"><img src="img\history.svg" alt=""></a>
+                <a href="#Slide four"><img src="img\Skills.svg" alt=""></a>
               </div> 
         </nav>
     </header>
@@ -93,7 +93,10 @@
                 </div>
                 <div class="Linkedin">
                     <img src="img\icons8-linkedin-2 (1).svg" alt="Linkedin">
-                    <p> <a href="linkedin.com/in/monniermaxence">linkedin.com/in/monniermaxence</a> </p>
+                    <p> <a href="https://www.linkedin.com/in/maxence-monnier-522bb221a/" target="_blank">linkedin.com/in/monniermaxence</a> </p>
+                </div>
+                <div>
+                  <form action="maxencemonnier@gmail.com"><input type="email" name="_replyto"><textarea   name="body"></textarea><input type="submit" value="Send"></form>
                 </div>
                 <div class="machins">
                     <img src="img\trucs qui flottent.svg" alt="ah">
@@ -138,12 +141,12 @@
     <div class="slide four" id="Slide four">
 
             <section class="Skills">
-                <img src="img\HTML vector.svg" alt="html">
-                <img src="img\CSS vector.svg" alt="css">
-                <img src="img\icons8-adobe-photoshop.svg" alt="photoshop">
-                <img src="img\icons8-visual-studio-code-2019.svg" alt="visual code">
-                <img src="img\wordpress.svg" alt="wordpress">
-                <img src="img\icons8-office-365.svg" alt="Pack Office">
+                <img src="img\HTML vector.svg" alt="html" id="left">
+                <img src="img\CSS vector.svg" alt="css" id="left">
+                <img src="img\icons8-adobe-photoshop.svg" alt="photoshop" id="left">
+                <img src="img\icons8-visual-studio-code-2019.svg" alt="visual code" id="right">
+                <img src="img\wordpress.svg" alt="wordpress" id="right">
+                <img src="img\icons8-office-365.svg" alt="Pack Office" id="right">
                 <img src="img\united-kingdom.svg" alt="Union Jack">
                 <div class="machins">
                     <img src="img\trucs qui flottent.svg" alt="ah">
