--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <header>
         <nav>
             <div class="navbar">
-                <a  href="#Slide one" class="active"><img src="img\home.svg" alt=""></a>
-                <a href="#Slide two"><img src="img\Infos.svg" alt=""></a>
-                <a href="#Slide three"><img src="img\history.svg" alt=""></a>
-                <a href="#Slide four"><img src="img\Skills.svg" alt=""></a>
+                <a  href="#Slide one" class="active"><img src="img\home.svg" alt="">Home</a>
+                <a href="#Slide two"><img src="img\Infos.svg" alt="">Infos</a>
+                <a href="#Slide three"><img src="img\history.svg" alt="">Parcours</a>
+                <a href="#Slide four"><img src="img\Skills.svg" alt="">Skills</a>
               </div> 
         </nav>
     </header>
@@ -94,9 +94,6 @@
                 <div class="Linkedin">
                     <img src="img\icons8-linkedin-2 (1).svg" alt="Linkedin">
                     <p> <a href="https://www.linkedin.com/in/maxence-monnier-522bb221a/" target="_blank">linkedin.com/in/monniermaxence</a> </p>
-                </div>
-                <div>
-                  <form action="maxencemonnier@gmail.com"><input type="email" name="_replyto"><textarea   name="body"></textarea><input type="submit" value="Send"></form>
                 </div>
                 <div class="machins">
                     <img src="img\trucs qui flottent.svg" alt="ah">
