--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <section class="infos">
                 <div class="phone">
                     <img src="img\iconmonstr-mobile-thin.svg" alt="Phone">
-                    <p>0625957880</p>
+                    <a href="tel:0625957880">0625957880</a>
                 </div>
                 <div class="mail">
                     <img src="img\iconmonstr-mail-thin.svg" alt="mail">
