--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h2>Projet : Développeur Python</h2>
                 </div>
 
-                <!-- TENTATIVE DE BOUTON -->
+                <!--BOUTON -->
                 <div id="div">
                   <p class="text">Télécharger en format papier.</p>
                     <div id="download">
@@ -81,24 +81,24 @@
                 </div>
                 <div class="mail">
                     <img src="img\iconmonstr-mail-thin.svg" alt="mail">
-                    <p>maxencemonnier@gmail.com</p>
+                    <a href="mailto:maxencemonnier@gmail.com">maxencemonnier@gmail.com</a>
                 </div>
                 <div class="website">
-                    <img src="img\iconmonstr-globe-thin.svg" alt="website">
-                    <p>En construction</p>
+                    <img src="img\github.svg" alt="website">
+                    <a href="https://github.com/MaxenceMonnier?tab=repositories" target="_blank">Mon Profil Github</a>
                 </div>
                 <div class="permis">
                     <img src="img\iconmonstr-car-2.svg" alt="car">
-                    <p>Permis B • Véhiculé</p>
+                    Permis B • Véhiculé
                 </div>
                 <div class="Linkedin">
                     <img src="img\icons8-linkedin-2 (1).svg" alt="Linkedin">
-                    <p> <a href="https://www.linkedin.com/in/maxence-monnier-522bb221a/" target="_blank">linkedin.com/in/monniermaxence</a> </p>
+                  <a href="https://www.linkedin.com/in/maxence-monnier-522bb221a/" target="_blank">linkedin.com/in/monniermaxence</a>
                 </div>
                 <div class="machins">
                     <img src="img\trucs qui flottent.svg" alt="ah">
                 </div>
-            </section>
+              </section>
           </div>
     <div class="slide three" id="Slide three">
             <section class="Formations">
