--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <header>
         <nav>
             <div class="navbar">
-                <a  href="#Slide one" class="active"><img src="img\home.svg" alt="">Home</a>
-                <a href="#Slide two"><img src="img\Infos.svg" alt="">Infos</a>
-                <a href="#Slide three"><img src="img\history.svg" alt="">Parcours</a>
-                <a href="#Slide four"><img src="img\Skills.svg" alt="">Skills</a>
+                <a  href="#Slide one" class="active"><img src="img\home.svg" alt=""></a>
+                <a href="#Slide two"><img src="img\Infos.svg" alt=""></a>
+                <a href="#Slide three"><img src="img\history.svg" alt=""></a>
+                <a href="#Slide four"><img src="img\Skills.svg" alt=""></a>
               </div> 
         </nav>
     </header>
@@ -80,16 +80,17 @@
                     <a href="tel:0625957880">0625957880</a>
                 </div>
                 <div class="mail">
-                    <img src="img\iconmonstr-mail-thin.svg" alt="mail">
                     <a href="mailto:maxencemonnier@gmail.com">maxencemonnier@gmail.com</a>
+                    <img src="img\iconmonstr-mail-thin.svg" alt="mail">
                 </div>
                 <div class="website">
                     <img src="img\github.svg" alt="website">
                     <a href="https://github.com/MaxenceMonnier?tab=repositories" target="_blank">Mon Profil Github</a>
                 </div>
                 <div class="permis">
+                  Permis B • Véhiculé
                     <img src="img\iconmonstr-car-2.svg" alt="car">
-                    Permis B • Véhiculé
+                    
                 </div>
                 <div class="Linkedin">
                     <img src="img\icons8-linkedin-2 (1).svg" alt="Linkedin">
