--- a/index.html
+++ b/index.html
@@ -77,24 +77,24 @@
             <section class="infos">
                 <div class="phone">
                     <img src="img\iconmonstr-mobile-thin.svg" alt="Phone">
-                    <a href="tel:0625957880">0625957880</a>
+                    <a href="tel:0625957880">  0625957880  </a>
                 </div>
                 <div class="mail">
-                    <a href="mailto:maxencemonnier@gmail.com">maxencemonnier@gmail.com</a>
+                    <a href="mailto:maxencemonnier@gmail.com">  maxencemonnier@gmail.com  </a>
                     <img src="img\iconmonstr-mail-thin.svg" alt="mail">
                 </div>
                 <div class="website">
                     <img src="img\github.svg" alt="website">
-                    <a href="https://github.com/MaxenceMonnier?tab=repositories" target="_blank">Mon Profil Github</a>
+                    <a href="https://github.com/MaxenceMonnier?tab=repositories" target="_blank">  Mon Profil Github  </a>
                 </div>
                 <div class="permis">
-                  Permis B • Véhiculé
+                  <p>  Permis B • Véhiculé  </p>
                     <img src="img\iconmonstr-car-2.svg" alt="car">
                     
                 </div>
                 <div class="Linkedin">
                     <img src="img\icons8-linkedin-2 (1).svg" alt="Linkedin">
-                  <a href="https://www.linkedin.com/in/maxence-monnier-522bb221a/" target="_blank">linkedin.com/in/monniermaxence</a>
+                  <a href="https://www.linkedin.com/in/maxence-monnier-522bb221a/" target="_blank">  linkedin.com/in/monniermaxence  </a>
                 </div>
                 <div class="machins">
                     <img src="img\trucs qui flottent.svg" alt="ah">
@@ -139,13 +139,27 @@
     <div class="slide four" id="Slide four">
 
             <section class="Skills">
-                <img src="img\HTML vector.svg" alt="html" id="left">
-                <img src="img\CSS vector.svg" alt="css" id="left">
-                <img src="img\icons8-adobe-photoshop.svg" alt="photoshop" id="left">
-                <img src="img\icons8-visual-studio-code-2019.svg" alt="visual code" id="right">
-                <img src="img\wordpress.svg" alt="wordpress" id="right">
-                <img src="img\icons8-office-365.svg" alt="Pack Office" id="right">
+              <div class="shtml">
+                <img src="img\HTML vector.svg" alt="html">
+              </div>
+              <div class="css"> 
+               <img src="img\CSS vector.svg" alt="css">
+              </div>  
+              <div class="photoshop">
+                <img src="img\icons8-adobe-photoshop.svg" alt="photoshop">
+              </div>
+              <div class="vcode">
+                <img src="img\icons8-visual-studio-code-2019.svg" alt="visual code">
+              </div>
+              <div class="wordpress">
+                <img src="img\wordpress.svg" alt="wordpress">
+              </div>
+              <div class="office">
+                <img src="img\icons8-office-365.svg" alt="Pack Office">
+              </div>
+              <div class="jack">
                 <img src="img\united-kingdom.svg" alt="Union Jack">
+              </div>
                 <div class="machins">
                     <img src="img\trucs qui flottent.svg" alt="ah">
                 </div>
