--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
     <link rel="stylesheet" href="css\style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/hrk3qou.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="js/button.js"></script>
 
@@ -29,7 +30,6 @@
           <div class="slide one" id="Slide one">
             <section class="Intro">
                 <div class="Nom">
-                <img src="img\Silhouette-homme.png" alt="pfp">
                 <H1>Maxence Monnier</H1>
                 <h2>Projet : Développeur Python</h2>
                 </div>
@@ -38,7 +38,6 @@
                 <div id="div">
                   <p class="text">Télécharger en format papier.</p>
                     <div id="download">
-                  
                       <svg style="width: 200px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000"> 
                         <title>download</title>
                         <g id="template">
@@ -158,11 +157,31 @@
                 <img src="img\icons8-office-365.svg" alt="Pack Office">
               </div>
               <div class="jack">
+                <p>Bilingue, Niveau C2, quotidiennement pratiqué.</p>
                 <img src="img\united-kingdom.svg" alt="Union Jack">
               </div>
-                <div class="machins">
-                    <img src="img\trucs qui flottent.svg" alt="ah">
-                </div>
+              <div class="git">
+                <img src="img\git-scm-icon.svg" alt="git">
+              </div>
+              <div class="canva">
+                <img src="img\canva-1.svg" alt="">
+              </div>
+            </section>
+            <section class="softskills">
+              <ul>
+                <li>Communication Écrite</li>
+                <li>Travail en Équipe</li>
+                <li>Gestion de Conflit</li>
+                <li>Respect & Politesse</li>
+                <li>Accept des Feedbacks</li>
+                <li>Responsabilité & Intégrité</li>
+                <li>Volonté d'Apprendre</li>
+                <li>Curiosité</li>
+                <li>Créativité</li>
+              </ul>
+              <div class="machins">
+                <img src="img\trucs qui flottent.svg" alt="ah">
+            </div>
             </section>
     </div>
     </div>
