--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <div id="div">
                   <p class="text">Télécharger en format papier.</p>
                     <div id="download">
+                      <a href="\img\CV TEST (1).pdf" download target="_blank">
                       <svg style="width: 200px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000"> 
                         <title>download</title>
                         <g id="template">
@@ -68,6 +69,7 @@
                           <path id="tickround" d="M860.41,327.75a394.09,394.09,0,0,1,38.35,170.85c0,220.23-178.53,398.75-398.75,398.75S101.25,718.82,101.25,498.59,279.77,99.84,500,99.84c158.83,0,296,92.86,360.09,227.25L500,721.55l-.15,0L286.06,495.26"/>
                          </g>
                       </svg>
+                    </a>
                   </div>
                 </div>
             </section>
