--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div id="div">
                   <p class="text">Télécharger en format papier.</p>
                     <div id="download">
-                      <a href="\img\CV TEST (1).pdf" download target="_blank">
+                      <a href="img\CV TEST (1).pdf" download target="_blank">
                       <svg style="width: 200px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000"> 
                         <title>download</title>
                         <g id="template">
@@ -167,9 +167,7 @@
               </div>
               <div class="canva">
                 <img src="img\canva-1.svg" alt="">
-              </div>
-            </section>
-            <section class="softskills">
+              </div> 
               <ul>
                 <li>Communication Écrite</li>
                 <li>Travail en Équipe</li>
@@ -181,7 +179,6 @@
                 <li>Curiosité</li>
                 <li>Créativité</li>
               </ul>
-
             </section>
     </div>
     </div>
