--- a/index.html
+++ b/index.html
@@ -44,8 +44,6 @@
             <H1>Maxence Monnier</H1>
             <h2>Projet : Développeur Python</h2>
           </div>
-
-          <!--BOUTON -->
           <div id="div">
             <p class="text">Télécharger en format papier.</p>
             <div id="download">
@@ -113,6 +111,7 @@
             <line class="cls-1 svg-elem-12" x1="148.52" y1="40.26" x2="142.43" y2="50.6"></line>
             <ellipse class="cls-1 svg-elem-13" cx="141.65" cy="137.39" rx="140.15" ry="135.89"></ellipse>
           </svg>
+
           <div class="phone">
             <img src="img\iconmonstr-mobile-thin.svg" alt="Phone">
             <a href="tel:0625957880">  0625957880  </a>
@@ -145,23 +144,20 @@
         <section class="portfolio">
           <div>
             <div class="header d-flex flex-column align-items-center">
-              <h1 class="display-6 mt-3 mb-0">lightGallery</h1>
+              <h1 class="display-6 mt-3 mb-0">Portfolio</h1>
               <p class="lead mt-2 mb-4">
-                lightGallery is a feature-rich, modular JavaScript gallery plugin for building beautiful image and video
-                galleries for the web and the mobile
+                Voici mes projets.
               </p>
-              <a class="btn mb-5 btn-outline-primary" href="https://github.com/sachinchoolur/lightGallery"
-                target="_blank">View on GitHub</a>
             </div>
             <div class="gallery-container d-flex align-items-center justify-content-center" id="gallery-container">
 
               <a data-lg-size="1400-1400" class="gallery-item"
-                data-src="https://images.unsplash.com/photo-1588093413519-17cec3f64e40?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1400&q=80"
-                data-sub-html="<h4>Photo by - <a href='https://unsplash.com/@entrycube' >Diego Guzmán </a></h4> <p> Location - <a href='https://unsplash.com/s/photos/fushimi-inari-taisha-shrine-senbontorii%2C-68%E7%95%AA%E5%9C%B0-fukakusa-yabunouchicho%2C-fushimi-ward%2C-kyoto%2C-japan'>Fushimi Ward, Kyoto, Japan</a></p>">
+                data-src="img\Fatzilla.png"
+                data-sub-html="<h4>Photo by - Monnier Maxence</h4> <p> Location - <a href='https://unsplash.com/s/photos/fushimi-inari-taisha-shrine-senbontorii%2C-68%E7%95%AA%E5%9C%B0-fukakusa-yabunouchicho%2C-fushimi-ward%2C-kyoto%2C-japan'>Fushimi Ward, Kyoto, Japan</a></p>">
                 <img class="img-fluid"
-                  src="https://images.unsplash.com/photo-1588093413519-17cec3f64e40?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=240&q=80" />
+                  src="img\Fatzilla.png" />
               </a>
-              <a data-lg-size="1443-1329" class="gallery-item"
+              <!-- <a data-lg-size="1443-1329" class="gallery-item"
                 data-src="https://images.unsplash.com/photo-1563502310703-1ffe473ad66d?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1443&q=80"
                 data-sub-html="<h4>Photo by - <a href='https://unsplash.com/@asoshiation' >Shah </a></h4><p> Location - <a href='https://unsplash.com/s/photos/shinimamiya%2C-osaka%2C-japan'>Shinimamiya, Osaka, Japan</a></p>">
                 <img class="img-fluid"
@@ -172,9 +168,35 @@
                 data-sub-html="<h4>Photo by - <a href='https://unsplash.com/@katherine_xx11' >Katherine Gu </a></h4><p> For all those years we were alone and helpless.</p>">
                 <img class="img-fluid"
                   src="https://images.unsplash.com/photo-1613541444699-39429d990353?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=240&q=80" />
-              </a>
+              </a> -->
             </div>
           </div>
+          <svg id="Calque_2" data-name="Calque 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 283.3 274.77"
+          width="283.29998779296875" height="274.7699890136719">
+          <defs>
+            <style>
+              .cls-1 {
+                fill: none;
+                stroke: #618333;
+                stroke-miterlimit: 10;
+                stroke-width: 3px;
+              }
+            </style>
+          </defs>
+          <line class="cls-1 svg-elem-1" x1="143.65" y1="272.6" x2="68.65" y2="197.6"></line>
+          <line class="cls-1 svg-elem-2" x1="68.65" y1="199.6" x2="143.65" y2="124.6"></line>
+          <line class="cls-1 svg-elem-3" x1="216.65" y1="199.6" x2="141.65" y2="124.6"></line>
+          <line class="cls-1 svg-elem-4" x1="141.65" y1="272.6" x2="216.65" y2="197.6"></line>
+          <line class="cls-1 svg-elem-5" x1="143.65" y1="124.1" x2="68.65" y2="49.1"></line>
+          <line class="cls-1 svg-elem-6" x1="141.65" y1="124.1" x2="216.65" y2="49.1"></line>
+          <line class="cls-1 svg-elem-7" x1="116.38" y1="3.7" x2="69.65" y2="50.1"></line>
+          <line class="cls-1 svg-elem-8" x1="169.2" y1="4.12" x2="215.65" y2="50.1"></line>
+          <line class="cls-1 svg-elem-9" x1="142.54" y1="269.64" x2="142.54" y2="48.47"></line>
+          <line class="cls-1 svg-elem-10" x1="142.54" y1="50.6" x2="142.54" y2="39.6"></line>
+          <line class="cls-1 svg-elem-11" x1="136.68" y1="40.26" x2="142.77" y2="50.6"></line>
+          <line class="cls-1 svg-elem-12" x1="148.52" y1="40.26" x2="142.43" y2="50.6"></line>
+          <ellipse class="cls-1 svg-elem-13" cx="141.65" cy="137.39" rx="140.15" ry="135.89"></ellipse>
+        </svg>
         </section>
       </div>
       <div class="slide three" id="Slide three">
@@ -206,12 +228,37 @@
 
                 <h3>Employé Polyvalent • Atelier Numérique.</h3>
 
-                <p>Exploration du numérique et du développement web à l'Atelier Numérique d'Ageval.
-                  <p />
+                <p>Exploration du numérique et du développement web à l'Atelier Numérique d'Ageval.</p>
 
               </li>
             </ul>
           </div>
+          <svg id="Calque_3" data-name="Calque 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 283.3 274.77"
+          width="283.29998779296875" height="274.7699890136719">
+          <defs>
+            <style>
+              .cls-1 {
+                fill: none;
+                stroke: #618333;
+                stroke-miterlimit: 10;
+                stroke-width: 3px;
+              }
+            </style>
+          </defs>
+          <line class="cls-1 svg-elem-1" x1="143.65" y1="272.6" x2="68.65" y2="197.6"></line>
+          <line class="cls-1 svg-elem-2" x1="68.65" y1="199.6" x2="143.65" y2="124.6"></line>
+          <line class="cls-1 svg-elem-3" x1="216.65" y1="199.6" x2="141.65" y2="124.6"></line>
+          <line class="cls-1 svg-elem-4" x1="141.65" y1="272.6" x2="216.65" y2="197.6"></line>
+          <line class="cls-1 svg-elem-5" x1="143.65" y1="124.1" x2="68.65" y2="49.1"></line>
+          <line class="cls-1 svg-elem-6" x1="141.65" y1="124.1" x2="216.65" y2="49.1"></line>
+          <line class="cls-1 svg-elem-7" x1="116.38" y1="3.7" x2="69.65" y2="50.1"></line>
+          <line class="cls-1 svg-elem-8" x1="169.2" y1="4.12" x2="215.65" y2="50.1"></line>
+          <line class="cls-1 svg-elem-9" x1="142.54" y1="269.64" x2="142.54" y2="48.47"></line>
+          <line class="cls-1 svg-elem-10" x1="142.54" y1="50.6" x2="142.54" y2="39.6"></line>
+          <line class="cls-1 svg-elem-11" x1="136.68" y1="40.26" x2="142.77" y2="50.6"></line>
+          <line class="cls-1 svg-elem-12" x1="148.52" y1="40.26" x2="142.43" y2="50.6"></line>
+          <ellipse class="cls-1 svg-elem-13" cx="141.65" cy="137.39" rx="140.15" ry="135.89"></ellipse>
+        </svg>
         </section>
       </div>
       <div class="slide four" id="Slide four">
@@ -274,7 +321,32 @@
               </div>
             </div>
           </div>
-
+          <svg id="Calque_4" data-name="Calque 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 283.3 274.77"
+          width="283.29998779296875" height="274.7699890136719">
+          <defs>
+            <style>
+              .cls-1 {
+                fill: none;
+                stroke: #618333;
+                stroke-miterlimit: 10;
+                stroke-width: 3px;
+              }
+            </style>
+          </defs>
+          <line class="cls-1 svg-elem-1" x1="143.65" y1="272.6" x2="68.65" y2="197.6"></line>
+          <line class="cls-1 svg-elem-2" x1="68.65" y1="199.6" x2="143.65" y2="124.6"></line>
+          <line class="cls-1 svg-elem-3" x1="216.65" y1="199.6" x2="141.65" y2="124.6"></line>
+          <line class="cls-1 svg-elem-4" x1="141.65" y1="272.6" x2="216.65" y2="197.6"></line>
+          <line class="cls-1 svg-elem-5" x1="143.65" y1="124.1" x2="68.65" y2="49.1"></line>
+          <line class="cls-1 svg-elem-6" x1="141.65" y1="124.1" x2="216.65" y2="49.1"></line>
+          <line class="cls-1 svg-elem-7" x1="116.38" y1="3.7" x2="69.65" y2="50.1"></line>
+          <line class="cls-1 svg-elem-8" x1="169.2" y1="4.12" x2="215.65" y2="50.1"></line>
+          <line class="cls-1 svg-elem-9" x1="142.54" y1="269.64" x2="142.54" y2="48.47"></line>
+          <line class="cls-1 svg-elem-10" x1="142.54" y1="50.6" x2="142.54" y2="39.6"></line>
+          <line class="cls-1 svg-elem-11" x1="136.68" y1="40.26" x2="142.77" y2="50.6"></line>
+          <line class="cls-1 svg-elem-12" x1="148.52" y1="40.26" x2="142.43" y2="50.6"></line>
+          <ellipse class="cls-1 svg-elem-13" cx="141.65" cy="137.39" rx="140.15" ry="135.89"></ellipse>
+        </svg>
         </section>
       </div>
     </div>
